chmod: final phase deployed for testing.
