# docs/swagger.json
@@ -680,6 +680,56 @@
                 }
             }
         },
+        "/workouts/reports": {
+            "get": {
+                "description": "Get the workout reports of the authenticated user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Workout"
+                ],
+                "summary": "Get user workout reports",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controllers_workout.WorkoutReport"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/workouts/schedules": {
             "get": {
                 "description": "Get the workout schedule of the authenticated user",
@@ -750,6 +800,74 @@
                         "schema": {
                             "$ref": "#/definitions/internal_controllers_workout.WorkoutSchedule"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_controllers_workout.WorkoutSchedule"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/workouts/schedules/status": {
+            "get": {
+                "description": "Filter the workout schedule of the authenticated user by status",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Workout"
+                ],
+                "summary": "Filter user workout schedule by status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Workout Status",
+                        "name": "status",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -1161,6 +1279,23 @@
                 },
                 "weight": {
                     "type": "number"
+                }
+            }
+        },
+        "internal_controllers_workout.WorkoutReport": {
+            "type": "object",
+            "properties": {
+                "average_weight": {
+                    "type": "number"
+                },
+                "total_reps": {
+                    "type": "integer"
+                },
+                "total_workouts": {
+                    "type": "integer"
+                },
+                "workout_name": {
+                    "type": "string"
                 }
             }
         },
